# music-preference-tg-bot

./: .gitignore  Dockerfile  README.md  config.py  main.py  models.py  pyproject.toml  service.py  service2.py  services.py
mp-bot/: __main__.py  bot.py  configuration.py
