[tool.poetry]
name = "mp-bot"
version = "0.0.0"
description = "Music preference Telegram bot."
authors = ["John Doe <johndoe@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.16"

[tool.poetry.group.dev.dependencies]
black = "^22.12"
pylint = "^2.15"
pydocstyle = "^6.3"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring"
]

[tool.pydocstyle]
ignore = [
    "D1",       # missing docstrings
    "D203",     # 1 blank line required before class docstring
    "D213"      # Multi-line docstring summary should start at the second line
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"